fix alignment of CTA

--- a/css/index.css
+++ b/css/index.css
@@ -81,9 +81,9 @@ header {
 	align-items: center;
 }
 
-/* .logo {
+.logo {
 	margin-left: 130px;
-} */
+}
 
 .cta-text h1 {
 	font-size: 50pt;
@@ -170,6 +170,7 @@ header {
     .logo {
         width: 30%;
         margin-bottom:20px;
+        margin-left:0px;
         
     }
     
@@ -183,6 +184,7 @@ header {
         margin-bottom: 40px;
     }
     .cta-text {
+        margin-left: 0px;
         text-align: center;
         vertical-align: middle;
     }
@@ -273,6 +275,7 @@ header {
         width: 30%;
         margin-bottom:20px;
         align-items: center;
+        margin-left: 0px;
     }
     
     .cta-text h1 {
@@ -286,6 +289,7 @@ header {
        
     }
     .cta-text {
+        margin-left: 0px;
         text-align: center;
         vertical-align: middle;
       
